--- a/minha-app/src/styles.css
+++ b/minha-app/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
+  opacity: 1 !important;
+}
