Add: ngIf para mostrar o próximo jogar ou o vencedor no momento correto da partida; e ngFor para reduzir a quantidade de linhas na tabela.

--- a/jogo-da-velha/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/jogo-da-velha/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,7 +1,7 @@
-<p>Jogador atual: {{currentPlayer}}</p>
-<p>Vencedor: {{winner}}</p>
+<p *ngIf="!winner">Jogador atual: {{currentPlayer}}</p>
+<p *ngIf="winner">Vencedor: {{winner}}</p>
 
-<table class="main-table">
+<!-- <table class="main-table">
   <tr>
     <td (click)="processPlay(0, 0)">{{board[0][0]}}</td>
     <td (click)="processPlay(0, 1)">{{board[0][1]}}</td>
@@ -16,6 +16,12 @@
     <td (click)="processPlay(2, 0)">{{board[2][0]}}</td>
     <td (click)="processPlay(2, 1)">{{board[2][1]}}</td>
     <td (click)="processPlay(2, 2)">{{board[2][2]}}</td>
+  </tr>
+</table> -->
+
+<table class="main-table">
+  <tr *ngFor="let row of [0, 1, 2]">
+    <td *ngFor="let col of [0, 1, 2]" (click)="processPlay(row, col)">{{board[row][col]}}</td>
   </tr>
 </table>
 
