--- a/minha-app/src/app/app.component.html
+++ b/minha-app/src/app/app.component.html
@@ -13,5 +13,21 @@
   <hr style="margin: 3rem 0;">
 
   <app-to-do-list></app-to-do-list>
+  <hr style="margin: 3rem 0;">
+
+  <h4>Filmes</h4>
+
+  <table>
+    <tr>
+      <th>Título</th>
+      <th>Nota</th>
+    </tr>
+    <tr *ngFor="let movie of movies">
+      <td>{{movie.title}}</td>
+      <td>
+        <app-rating [(rating)]="movie.rating"></app-rating>
+      </td>
+    </tr>
+  </table>
 
 </div>
