--- a/minha-app/src/styles.css
+++ b/minha-app/src/styles.css
@@ -1,3 +1,8 @@
 [type="checkbox"]:not(:checked), [type="checkbox"]:checked {
   opacity: 1 !important;
 }
+
+.rating {
+  color: #c8c804;
+  cursor: pointer;
+}
