--- a/minha-app/src/app/to-do-list/to-do-list.component.html
+++ b/minha-app/src/app/to-do-list/to-do-list.component.html
@@ -5,11 +5,11 @@
 
 <table>
   <tr *ngFor="let task of tasks; let i = index">
-    <ng-container *ngIf="!task.done">
-      <td><input type="checkbox" [checked]="task.done"></td>
+    <!-- <ng-container *ngIf="!task.done"> -->
+      <td><input type="checkbox" [(ngModel)]="task.done"></td>
       <td>{{task.description}}</td>
       <td><button (click)="deleteTask(i)">Remover a tarefa</button></td>
-    </ng-container>
+    <!-- </ng-container> -->
   </tr>
 </table>
 
@@ -18,3 +18,5 @@
   <p *ngSwitchCase="1">Uma tarefa</p>
   <p *ngSwitchDefault>{{tasks.length}} tarefas</p>
 </div>
+
+<div>{{tasks[0].done}}</div>
