Add: Componente Panel. Exemplo de expand e contract conteúdo.

--- a/minha-app/src/app/app.component.html
+++ b/minha-app/src/app/app.component.html
@@ -15,8 +15,8 @@
   <app-to-do-list></app-to-do-list>
   <hr style="margin: 3rem 0;">
 
-  <h4>Filmes</h4>
 
+<panel title="Filmes">
   <table>
     <tr>
       <th>Título</th>
@@ -29,5 +29,8 @@
       </td>
     </tr>
   </table>
+</panel>
 
-</div>
+<panel title="Séries">
+  <p>Séries</p>
+</panel>
