Add: Imagens na pasta assets. Troca da tag de app-galeria para galeria.

--- a/galeria-fotos/src/app/app.component.html
+++ b/galeria-fotos/src/app/app.component.html
@@ -1,1 +1,11 @@
-<app-galeria></app-galeria>
+<galeria titulo = "Fotos de animais"></galeria>
+
+  <!-- [fotos] = [
+    'assets/foto-1.jpg',
+    'assets/foto-2.jpg',
+    'assets/foto-3.jpg',
+    'assets/foto-4.jpg'
+  ]; -->
+</galeria>
+
+<galeria titulo = "Fotos de pessoas"></galeria>
