Add: Component galeria.component; Create: Strutura do projeto.

--- a/galeria-fotos/src/app/galeria/galeria.component.html
+++ b/galeria-fotos/src/app/galeria/galeria.component.html
@@ -1,1 +1,19 @@
-<p>galeria works!</p>
+<h4>{{title}}</h4>
+
+<div class="container">
+  <section class="galery">
+    <div>
+      {{photos}}
+      <!-- <img class="galery-img" src="./assets/01.jpg" alt="Primeira Foto"> -->
+    </div>
+
+    <div class="group-buttons">
+      <span>Foto X de X</span>
+      <!-- <button *ngIf=""><<</button> -->
+      <button><<</button>
+      <button><</button>
+      <button>></button>
+      <button>>></button>
+    </div>
+  </section>
+</div>
