--- a/galeria-fotos/src/app/app.component.html
+++ b/galeria-fotos/src/app/app.component.html
@@ -1,4 +1,10 @@
-<galeria titulo = "Fotos de animais"></galeria>
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+<galeria title="Fotos de Paisagens" class="center">
 
   <!-- [fotos] = [
     'assets/foto-1.jpg',
@@ -6,6 +12,9 @@
     'assets/foto-3.jpg',
     'assets/foto-4.jpg'
   ]; -->
+
 </galeria>
 
-<galeria titulo = "Fotos de pessoas"></galeria>
+<galeria title="Fotos de Animais" class="center hiddendiv">
+  <p>Nenhuma foto</p>
+</galeria>
