--- a/segunda-fase/src/app/app.component.html
+++ b/segunda-fase/src/app/app.component.html
@@ -14,6 +14,23 @@
 <body>
   <div class="container">
     <h4 class="center">{{title}}</h4>
+    <h4 class="center">{{title | lowercase}}</h4>
+    <h4 class="center">{{title | uppercase}}</h4>
+    <hr>
+
+    <p>N: {{n | number: '5.1-2':'pt'}}</p>
+    <hr>
+
+    <p>Hoje: {{hoje | date:'medium'}}</p>
+    <p>Hoje: {{hoje | date:'short'}}</p>
+    <p>Hoje: {{hoje | date:'H:mm'}}</p>
+    <hr>
+
+    <p>CEP: {{meuCep | cep}}</p>
+  </div>
+
+  <div class="container">
+    <h4 class="center">Ciclo de vida dos componentes</h4>
 
     <button (click)="add()">Adicionar</button>
 
@@ -24,12 +41,12 @@
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <h4>ngOnChanges</h4>
 
     <div>Label: <input [(ngModel)]="label"></div>
     <counter [label]="label"></counter>
-  </div>
+  </div> -->
 
 </body>
 </html>
